Add support for Text Components of net.kyori library